fix: header z-index

--- a/css/device-large.css
+++ b/css/device-large.css
@@ -40,6 +40,7 @@ header {
     right: 0;
     background-color: white;
     box-shadow: 0 4px 12px 0 rgba(0, 0, 0, .05);
+    z-index: 999;
 }
 
 .header-wrapper {
